--- a/chess-server/chess-server.csproj
+++ b/chess-server/chess-server.csproj
@@ -16,11 +16,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Shared\Shared.csproj" />
+      <PackageReference Include="Npgsql" Version="9.0.4" />
     </ItemGroup>
 
 </Project>
